# 2025-website

./: .gitignore  .tool-versions  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  pr_build.yml  update_schedule.yml
program/: index.html
public/media/avatars/: 1712749524080_SatwVlO.jfif
public/media/pycon-au-2024/: agenda.e6ca9a43c7217ad7.css  cfp.45696e4e6cfb06b9.css
public/pycon-au-2024/schedule/: feed.xml  nojs
public/static/common/: _...slug_.68c81182.css
scripts/: pyproject.toml  schedule_sync.py
src/: lib.ts  main_config.ts  util.ts  vars.scss
src/components/: Button.astro  Footer.astro  ImageGrid.astro  MailingListSignup.astro  Navigation.astro  NoOrphanText.astro  Profile.astro  ProgramSwitcher.astro  ProseList.astro  PurchaseButton.astro  Redirect.astro  SponsorListing.astro  Switcher.astro  SwitcherItem.astro
src/components/program/: Session.astro  lib.scss
src/content/: _contributors.md  _people_etags.yml  config.ts
src/content/breaks/: 3410-2024-11-23T08-25-00+11-00.yml  3410-2024-11-23T09-00-00+11-00.yml  3410-2024-11-23T09-25-00+11-00.yml  3410-2024-11-23T15-50-00+11-00.yml  3410-2024-11-24T09-00-00+11-00.yml  (+6 more)
src/layouts/: Base.astro  Page.astro  base.scss
src/pages/: [...slug].astro  [trackId].astro  _[trackId].astro  about.md  attend.mdx  conduct.astro  conduct.md  conduct.mdx  covid.astro  covid.mdx  culture.astro  culture.md  index.astro  program.mdx  sponsor.astro  sponsor.md  sprints.astro
src/typst/: socialCard.typ  speakerCard.typ  videoTitle.typ
(+839 files in other folders)
