[tool.poetry]
name = "schedule-sync"
version = "0.2025.0"
description = ""
authors = ["Daisy Leigh Brenecki <daisy@daisy.wtf>", "elena williams <git@elena.net.au>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
"ruamel.yaml" = "^0.17.32"
python-dateutil = "^2.8.2"
parse = "^1.19.1"
Markdown = "^3.4.3"
bleach = "^6.0.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
